<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robonomics_ros2_robot_handler</name>
  <version>2.0.0</version>
  <description>Package with basic class for robot that use Robonomics ROS 2 Pubsub</description>
  <maintainer email="fingerling42@proton.me">Ivan Berman</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>robonomics_ros2_interfaces</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
